remove header / footer links in help panel

--- a/data/resources/help/latex2e_0.html
+++ b/data/resources/help/latex2e_0.html
@@ -521,12 +521,7 @@ ul.no-bullet {list-style: none}
 
 
 
-<a name="Top"></a>
-<div class="header">
-<p>
-Next: <a href="latex2e_1.html#About-this-document" accesskey="n" rel="next">About this document</a>, Up: <a href="../dir/index.html" accesskey="u" rel="up">(dir)</a> &nbsp; [<a href="#SEC_Contents" title="Table of contents" rel="contents">Contents</a>][<a href="latex2e_30.html#Index" title="Index" rel="index">Index</a>]</p>
-</div>
-<a name="LaTeX2e_003a-An-unofficial-reference-manual"></a>
+<a name="Top"></a><a name="LaTeX2e_003a-An-unofficial-reference-manual"></a>
 <h1 class="top">LaTeX2e: An unofficial reference manual</h1>
 
 <p>This document is an unofficial reference manual (version of
@@ -534,11 +529,6 @@ October 2018) for LaTeX2e, a document preparation system.
 </p>
 
 
-<hr>
-<div class="header">
-<p>
-Next: <a href="latex2e_1.html#About-this-document" accesskey="n" rel="next">About this document</a>, Up: <a href="../dir/index.html" accesskey="u" rel="up">(dir)</a> &nbsp; [<a href="#SEC_Contents" title="Table of contents" rel="contents">Contents</a>][<a href="latex2e_30.html#Index" title="Index" rel="index">Index</a>]</p>
-</div>
 
 
 
