help panel: simplify start page, small changes

--- a/data/resources/help/latex2e_0.html
+++ b/data/resources/help/latex2e_0.html
@@ -53,6 +53,7 @@ into another language, under the above conditions for modified versions. -->
 <link href="latex2e_1.html#About-this-document" rel="next" title="About this document">
 <style type="text/css">
 <!--
+body { margin: 1em; margin-top: 0px; padding-top: 1px; }
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -82,19 +83,11 @@ ul.no-bullet {list-style: none}
 
 </head>
 
-<body lang="en">
+<body id="top" lang="en">
 <h1 class="settitle" align="center">LaTeX2e unofficial reference manual (October 2018)</h1>
         
-
-
-
-
-
-
-
-
 <a name="SEC_Overview"></a>
-<h2 class="shortcontents-heading">Short Table of Contents</h2>
+<!--<h2 class="shortcontents-heading">Short Table of Contents</h2>
 
 <div class="shortcontents">
 <ul class="no-bullet">
@@ -129,7 +122,7 @@ ul.no-bullet {list-style: none}
 <li><a name="stoc-Document-templates-1" href="#toc-Document-templates-1">Appendix A Document templates</a></li>
 <li><a name="stoc-Index-1" href="#toc-Index-1">Index</a></li>
 </ul>
-</div>
+</div>-->
 
 <a name="SEC_Contents"></a>
 <h2 class="contents-heading">Table of Contents</h2>
@@ -522,12 +515,6 @@ ul.no-bullet {list-style: none}
 
 
 <a name="Top"></a><a name="LaTeX2e_003a-An-unofficial-reference-manual"></a>
-<h1 class="top">LaTeX2e: An unofficial reference manual</h1>
-
-<p>This document is an unofficial reference manual (version of
-October 2018) for LaTeX2e, a document preparation system.
-</p>
-
 
 
 
