--- a/data/resources/help/latex2e_1.html
+++ b/data/resources/help/latex2e_1.html
@@ -54,6 +54,7 @@ into another language, under the above conditions for modified versions. -->
 <link href="latex2e_0.html#Top" rel="prev" title="Top">
 <style type="text/css">
 <!--
+body { margin: 1em; margin-top: 0px; padding-top: 1px; }
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -83,7 +84,7 @@ ul.no-bullet {list-style: none}
 
 </head>
 
-<body lang="en">
+<body id="top" lang="en">
 <a name="About-this-document"></a>
 <a name="About-this-document-1"></a>
 <h2 class="chapter">1 About this document</h2>
