--- a/data/resources/help/latex2e_30.html
+++ b/data/resources/help/latex2e_30.html
@@ -53,6 +53,7 @@ into another language, under the above conditions for modified versions. -->
 <link href="latex2e_29.html#tugboat-template" rel="prev" title="tugboat template">
 <style type="text/css">
 <!--
+body { margin: 1em; margin-top: 0px; padding-top: 1px; }
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -82,7 +83,7 @@ ul.no-bullet {list-style: none}
 
 </head>
 
-<body lang="en">
+<body id="top" lang="en">
 <a name="Index"></a>
 <a name="Index-1"></a>
 <h2 class="unnumbered">Index</h2>
