--- a/data/resources/help/latex2e_7.html
+++ b/data/resources/help/latex2e_7.html
@@ -54,6 +54,7 @@ into another language, under the above conditions for modified versions. -->
 <link href="latex2e_6.html#g_t_005c_0040startsection" rel="prev" title="\@startsection">
 <style type="text/css">
 <!--
+body { margin: 1em; margin-top: 0px; padding-top: 1px; }
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -83,7 +84,7 @@ ul.no-bullet {list-style: none}
 
 </head>
 
-<body lang="en">
+<body id="top" lang="en">
 <a name="Cross-references"></a>
 <a name="Cross-references-1"></a>
 <h2 class="chapter">7 Cross references</h2>
