--- a/data/resources/help/latex2e_13.html
+++ b/data/resources/help/latex2e_13.html
@@ -54,6 +54,7 @@ into another language, under the above conditions for modified versions. -->
 <link href="latex2e_12.html#g_t_005cignorespaces-_0026-_005cignorespacesafterend" rel="prev" title="\ignorespaces &amp; \ignorespacesafterend">
 <style type="text/css">
 <!--
+body { margin: 1em; margin-top: 0px; padding-top: 1px; }
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -83,7 +84,7 @@ ul.no-bullet {list-style: none}
 
 </head>
 
-<body lang="en">
+<body id="top" lang="en">
 <a name="Counters"></a>
 <a name="Counters-1"></a>
 <h2 class="chapter">13 Counters</h2>
