--- a/data/resources/help/latex2e_4.html
+++ b/data/resources/help/latex2e_4.html
@@ -54,6 +54,7 @@ into another language, under the above conditions for modified versions. -->
 <link href="latex2e_3.html#Class-and-package-commands" rel="prev" title="Class and package commands">
 <style type="text/css">
 <!--
+body { margin: 1em; margin-top: 0px; padding-top: 1px; }
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -83,7 +84,7 @@ ul.no-bullet {list-style: none}
 
 </head>
 
-<body lang="en">
+<body id="top" lang="en">
 <a name="Fonts"></a>
 <a name="Fonts-1"></a>
 <h2 class="chapter">4 Fonts</h2>
